--- a/playbook3.yaml
+++ b/playbook3.yaml
@@ -2,7 +2,13 @@
   hosts: web
   become: yes
   tasks:
-    - name: install nginx
-      ansible.builtin.package:
+  - name: install nginx
+     ansible.builtin.package:
         name: nginx
         state: present
+
+  - name: start nginx
+      ansible.builtin.serice:
+        name: nginx
+        state: started
+        enabled: yes
