--- a/vars.yaml
+++ b/vars.yaml
@@ -6,7 +6,6 @@
     DURATION: "140HRS"
     TRAINER: "Siva"
   tasks:
-  - name: print variables
-    ansible.biltin.debug:
-      msg: "course is: {{ COURSE }}, Trainer is: {{ TRAINER }}""
-
+    - name: print variables
+      ansible.builtin.debug:
+        msg: "course is: {{ COURSE }}, Trainer is: {{ TRAINER }}"
