--- a/datatypes.yaml
+++ b/datatypes.yaml
@@ -16,8 +16,8 @@
     - name: print variables
       ansible.builtin.debug:
         msg:
-          Program: { { PROGRAM } }
+          program: { { PROGRAM } }
           Duration: { { DURATION } }
-          IS Live?: { { IS_LIVE } }
-          Details: { { DETAILS } }
+          Is live?: { { IS_LIVE } }
+          DETAILS: { { DETAILS } }
           Topics: { { TOPICS } }
