--- a/datatypes.yaml
+++ b/datatypes.yaml
@@ -16,8 +16,8 @@
     - name: print variables
       ansible.builtin.debug:
         msg:
-          program: { { PROGRAM } }
-          Duration: { { DURATION } }
-          Is live?: { { IS_LIVE } }
-          DETAILS: { { DETAILS } }
-          Topics: { { TOPICS } }
+          program: "{{ PROGRAM }}"
+          Duration: "{{ DURATION }}"
+          Is live?: "{{ IS_LIVE }}"
+          DETAILS: "{{ DETAILS }}"
+          Topics: "{{ TOPICS }}"
