--- a/conditions.yaml
+++ b/conditions.yaml
@@ -4,7 +4,7 @@
   vars:
     IS_LIVW: true
   tasks:
-  - name: check live or not
-    ansible.builtin.debug
-      msg: "Yes, it is Live"
-    when: IS_LIVE
+    - name: check live or not
+      ansible.builtin.debug:
+        msg: "Yes, it is Live"
+      when: IS_LIVE
