--- a/conditions.yaml
+++ b/conditions.yaml
@@ -2,7 +2,7 @@
   hosts: local
   connection: local
   vars:
-    IS_LIVW: true
+    IS_LIVE: true
   tasks:
     - name: check live or not
       ansible.builtin.debug:
