--- a/loops2.yaml
+++ b/loops2.yaml
@@ -3,11 +3,11 @@
   connection: local
   become: Yes
   tasks:
-  - name: install package:
-    ansible.builtin.package:
-       name: "{{ item }}"
-       state: present
-    loop:
-    - mysql
-    - nginx
-    - zip
+    - name: install package
+      ansible.builtin.package:
+        name: "{{ item }}"
+        state: present
+      loop:
+        - mysql
+        - nginx
+        - zip
