--- a/filter.yaml
+++ b/filter.yaml
@@ -4,4 +4,4 @@
   tasks:
     - name: greeting
       ansible.builtin.debug:
-        msg: "Hi Tejasri, {{ GREETING | default(Good Morning) }}"
+        msg: "Hi Tejasri, {{ GREETING | default('Good Morning') }}"
